set the lower part of the result screen to position absolute to fix the layout glitch on mobiles

--- a/styles.css
+++ b/styles.css
@@ -320,7 +320,8 @@ header {
   flex-direction: column;
   align-items: center;
   gap: 2vh;
-  position: relative;
+  top: 25vh;
+  position: absolute;
   bottom: -5em;
 }
 
